added resume and update projects

--- a/index.html
+++ b/index.html
@@ -30,6 +30,15 @@
           Feel free to take a look at my projects below to see what I'm up
           to.
         </p>
+        <div class="flex flex-evenly">
+          <a href='https://github.com/kowabunga' target="_blank">
+            GitHub
+          </a>
+          <a href='https://www.linkedin.com/in/anthony-siletti/' target="_blank">
+            LinkedIn
+          </a>
+          <a href="/anthony_siletti_resume.pdf" target="_blank">Resume</a>
+        </div>
       </div>
     </section>
 
@@ -55,8 +64,50 @@
               Shopper Tropper is a mock ecommerce website built for a home
               goods store. Built with a clean and user friendly interface,
               it uses Google OAuth for authentication and authorization for
-              ease-of-access.
+              ease-of-access. Built with EJS.
             </p>
+            <div>
+              <a href="https://github.com/kowabunga/ga-project2-shop" target="_blank">GitHub</a>&nbsp;
+              <a href="https://shoppertropper.cyclic.app" target="_blank">Live</a>
+            </div>
+          </div>
+          <div class='card-img'>
+            <div>
+              <img src='/assets/shopper-tropper-home.png' alt='Shopper Tropper homepage' />
+            </div>
+          </div>
+        </div>
+
+        <div class='skewed-card'>
+          <div class='card-text'>
+            <small>Manage Your Tasks</small>
+            <h1>Task Terminator</h1>
+            <p>
+              Task Terminator is task management application used to manage all of your day-to-day tasks to aide in overall organization. Users will be able to create, edit and terminate all tasks once completed. Built with Django.
+            </p>
+            <div>
+              <a href="https://github.com/kowabunga/task_terminator" target="_blank">Github</a>
+              <a href="https://cold-firefly-9232.fly.dev/" target="_blank">Live</a>
+            </div>
+          </div>
+          <div class='card-img'>
+            <div>
+              <img src='/assets/task_terminator.png' alt='Shopper Tropper homepage' />
+            </div>
+          </div>
+        </div>
+
+        <div class='skewed-card'>
+          <div class='card-text'>
+            <small>Share Your Favorites</small>
+            <h1>Master Cook</h1>
+            <p>
+              Master Cook is a recipe and blog sharing website. You'll find yourself able to share your favorite recipes conveniently and post great tips and tricks for the kitchen and beyond!
+            </p>
+            <div>
+              <a href="https://github.com/kowabunga/ga-project-4" target="_blank">Github</a>
+              <a href="https://mastercook.cyclic.app/" target="_blank">Live</a>
+            </div>
           </div>
           <div class='card-img'>
             <div>
@@ -140,18 +191,13 @@
     </section>
   </main>
   <footer class='flex flex-gap flex-center first-section-margin h-25'>
-    <div class='flex flex-column flex-center'>
-      <a href='#'>
-        <i class='bi bi-github icon-size icon-left'></i>
+    <div class='flex flex-center'>
+      <a href='https://github.com/kowabunga' target="_blank">
+        <i class="fa-brands fa-square-github fa-3x"></i>
       </a>
-      <a href='#'>
-        <i class='bi bi-linkedin icon-size icon-right'></i>
+      <a href='https://www.linkedin.com/in/anthony-siletti/' target="_blank">
+        <i class="fa-brands fa-linkedin fa-3x"></i>
       </a>
-    </div>
-    <div class='flex flex-column flex-around h-f-s'>
-      <p class='bold'>Anthony Does Web Stuff</p>
-      <a href='#'>555-555-5555</a>
-      <a href='#'>anthony@webstuff.com</a>
     </div>
   </footer>
 </body>
