--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
           Questions? Concerns? Anything else? Send me a message and I'll
           respond as soon as I can.
         </p>
-        <form class='form'>
+        <form class='form' data-netlify="true" name="portfolio" method="POST" action="/">
           <div class='flex flex-column text-small form-field'>
             <label for='name'>Name</label>
             <input type='name' required />
