fix responsive card

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <h2 class='lead'>Projects</h2>
           <p>
             Look at all these projects. If any of these draw your interest,
-            don't hesistate to contact me below!
+            don't hesistate to contact me <a href="#form">below!</a>
           </p>
         </div>
 
@@ -156,7 +156,7 @@
       </ul>
     </section>
 
-    <section class='flex flex-between form-section section-margin'>
+    <section class='flex flex-between form-section section-margin' id="form">
       <img src='/assets/undraw_chatting_re_j55r.svg' class='form-img' />
       <div class='mw'>
         <h2>Reach out</h2>
