--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;1,600;1,700&family=Roboto:wght@100;300;400&display=swap" rel="stylesheet">
-  <script defer src="https://kit.fontawesome.com/7281f91f05.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
   <link rel="stylesheet" href="./style.css">
   <title>Anthony Siletti</title>
 </head>
@@ -111,7 +111,7 @@
           </div>
           <div class='card-img'>
             <div>
-              <img src='/assets/shopper-tropper-home.png' alt='Shopper Tropper homepage' />
+              <img src='/assets/master_cook.png' alt='Shopper Tropper homepage' />
             </div>
           </div>
         </div>
@@ -121,38 +121,18 @@
     <section class='skills-section-margin'>
       <h2 class='lead'>Skills</h2>
       <ul class='skills-ul flex flex-wrap flex-evenly'>
-        <li>
-          <i class='fab fa-github-square fa-4x flex-column'></i>
-          <p>GitHub</p>
-        </li>
-        <li>
-          <i class='fab fa-css3-alt fa-4x flex-column'></i>
-          <p>CSS</p>
-        </li>
-        <li>
-          <i class='fab fa-python fa-4x flex-column'></i>
-          <p>Python</p>
-        </li>
-        <li>
-          <i class='fab fa-js-square fa-4x flex-column'></i>
-          <p>JavaScript</p>
-        </li>
-        <li>
-          <i class='fab fa-react fa-4x flex-column'></i>
-          <p>React</p>
-        </li>
-        <li>
-          <i class='fab fa-git-alt fa-4x flex-column'></i>
-          <p>Git</p>
-        </li>
-        <li>
-          <i class='fab fa-bootstrap fa-4x flex-column'></i>
-          <p>Bootstrap</p>
-        </li>
-        <li>
-          <i class='fas fa-terminal fa-4x flex-column'></i>
-          <p>CLI</p>
-        </li>
+        <li><i class="devicon-github-original"></i></li>
+        <li><i class="devicon-html5-plain"></i></li>
+        <li><i class="devicon-css3-plain"></i></li>
+        <li><i class="devicon-javascript-plain"></i></li>
+        <li><i class="devicon-react-original"></i></li>
+        <li><i class="devicon-django-plain"></i></li>
+        <li><i class="devicon-git-plain"></i></li>
+        <li><i class="devicon-github-original"></i></li>
+        <li><i class="devicon-bootstrap-plain"></i></li>
+        <li><i class="devicon-nodejs-plain"></i></li>
+        <li><i class="devicon-express-original"></i></li>
+        <li><i class="devicon-mongodb-plain"></i></li>
       </ul>
     </section>
 
@@ -193,10 +173,10 @@
   <footer class='flex flex-gap flex-center first-section-margin h-25'>
     <div class='flex flex-center'>
       <a href='https://github.com/kowabunga' target="_blank">
-        <i class="fa-brands fa-square-github fa-3x"></i>
+        <i class="devicon-github-original"></i>
       </a>
       <a href='https://www.linkedin.com/in/anthony-siletti/' target="_blank">
-        <i class="fa-brands fa-linkedin fa-3x"></i>
+        <i class="devicon-linkedin-plain"></i>
       </a>
     </div>
   </footer>
