--- a/index.html
+++ b/index.html
@@ -165,6 +165,11 @@
             <input type='text' required />
           </div>
 
+          <div class='flex flex-column text-small form-field'>
+            <label for="message" class="label">Message</label>
+            <textarea name="message" id="message" required rows="5"></textarea>
+          </div>
+
           <input type='submit' value='Submit' class='button' />
         </form>
       </div>
