--- a/index.html
+++ b/index.html
@@ -146,22 +146,22 @@
         <form class='form' data-netlify="true" name="portfolio" method="POST" action="/">
           <div class='flex flex-column text-small form-field'>
             <label for='name'>Name</label>
-            <input type='name' required />
+            <input type='text' required name="name" />
           </div>
 
           <div class='flex flex-column text-small form-field'>
-            <label for='name'>Email</label>
-            <input type='email' required />
+            <label for='email'>Email</label>
+            <input type='email' required name="email" />
           </div>
 
           <div class='flex flex-column text-small form-field'>
-            <label for='name'>Company (optional)</label>
-            <input type='text' />
+            <label for='company'>Company (optional)</label>
+            <input type='text' name="company" />
           </div>
 
           <div class='flex flex-column text-small form-field'>
-            <label for='name'>Preferred time to contact</label>
-            <input type='text' required />
+            <label for='contact_time'>Preferred time to contact</label>
+            <input type='text' required name="contact_time" />
           </div>
 
           <div class='flex flex-column text-small form-field'>
