update skills margin/padding

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
       </div>
     </section>
 
-    <section class='skills-section-spacing flex-evenly bg-dark w-full flex-column'>
+    <section class='section-margin flex-evenly bg-dark w-full flex-column'>
       <div class='flex project-flex mb-2'>
         <img class='project-img-width' src='/assets/undraw_certificate_re_yadi.svg' />
 
