working on navbar

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-  <nav class="bg-dark">
+  <nav class="flex flex-end">
     <ul class="flex flex-center flex-between">
       <li>
         <a href="">Projects</a>
@@ -28,7 +28,7 @@
 
     </ul>
   </nav>
-  <header class='w-full flex-column bg-dark flex-evenly'>
+  <header class='w-full flex-column bg-dark '>
     <div class='profile-outer'>
       <img class='profile' src='/assets/278987322_353578783257844_1431226512088762579_n.jpg' />
     </div>
@@ -131,8 +131,8 @@
       </div>
     </section>
 
-    <section class='section-margin flex-evenly bg-dark w-full flex-column'>
-      <div class='flex project-flex mb-2'>
+    <section class='section-margin skills-section-spacing flex-evenly bg-dark w-full flex-column'>
+      <div class='flex flex-evenly project-flex mb-2 w-full'>
         <img class='project-img-width' src='/assets/undraw_certificate_re_yadi.svg' />
 
         <div class='flex flex-column projects-width'>
@@ -161,7 +161,7 @@
 
     </section>
 
-    <section class='section-margin' id=" form">
+    <section class='section-margin flex' id=" form">
       <img src='/assets/undraw_chatting_re_j55r.svg' class='form-img' />
       <div class='mw'>
         <h2>Reach out</h2>
