add href link to nav bar

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
   <title>Anthony Siletti</title>
 </head>
 
-<body>
+<body id="#top">
   <nav class="flex flex-between">
-    <span class="initials">A.S.</span>
+    <a href="#top" class="initials">A.S.</a>
     <ul class="flex flex-center flex-between">
       <li>
         <a href="#projects">Projects</a>
