fix scroll link

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           <h2 class='lead'>Projects</h2>
           <p>
             Look at all these projects. If any of these draw your interest,
-            don't hesistate to contact me <a href="#form">below!</a>
+            don't hesistate to contact me <a href="#contact">below!</a>
           </p>
         </div>
 
