add animation for menu dropdown on mobile

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;1,600;1,700&family=Roboto:wght@100;300;400&family=Shantell+Sans:ital@1&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
   <link rel="stylesheet" href="./style.css">
+  <script src="./main.js" defer></script>
   <title>Anthony Siletti</title>
 </head>
 
@@ -17,6 +18,9 @@
   <nav class="flex flex-between">
     <a href="#top" class="initials">A.S.</a>
     <ul class="flex flex-center flex-between">
+      <li>
+        <a href="#about">About</a>
+      </li>
       <li>
         <a href="#projects">Projects</a>
       </li>
@@ -28,6 +32,8 @@
       </li>
 
     </ul>
+    <div class="menu-btn normal">
+    </div>
   </nav>
   <header class='w-full flex-column '>
     <div class='first-section-margin flex flex-gap section-intro-border'>
