--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;1,600;1,700&family=Roboto:wght@100;300;400&family=Shantell+Sans:ital@1&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
   <link rel="stylesheet" href="./style.css">
-  <script src="./main.js" defer></script>
+  <script src="./main.js" defer type="module"></script>
   <title>Anthony Siletti</title>
 </head>
 
