fix spacing issue

--- a/index.html
+++ b/index.html
@@ -157,10 +157,10 @@
     </section>
 
     <section class='section-margin small-section-spacing' id="skills">
-      <div class='flex project-flex flex-center mb-2 '>
+      <div class='flex project-flex flex-center flex-gap mb-2 '>
         <img class='project-img-width' src='/assets/undraw_certificate_re_yadi.svg' />
 
-        <div class='flex flex-column skill-text-area'>
+        <div class='flex flex-column  skill-text-area'>
           <h2 class='lead sk'>Skills</h2>
           <p>
             Since I began my journey into software development I developed a love for creating websites that can be easily navigated. To that extend I've learned about numerous tools and technolgoes that can help me accomplish these tasks. From basic HTML to advanced React and Node.js I will not stop learning, for if I have I have failed.
