fix hamburger menu not showing on safari

--- a/index.html
+++ b/index.html
@@ -201,17 +201,17 @@
 
           <div class='flex flex-column text-small form-field'>
             <label for='email'>Email</label>
-            <input type='email' required name="email" />
+            <input type='email' required id="email" />
           </div>
 
           <div class='flex flex-column text-small form-field'>
             <label for='company'>Company (optional)</label>
-            <input type='text' name="company" />
+            <input type='text' id="company" />
           </div>
 
           <div class='flex flex-column text-small form-field'>
             <label for='contact_time'>Preferred time to contact</label>
-            <input type='text' required name="contact_time" />
+            <input type='text' required id="contact_time" />
           </div>
 
           <div class='flex flex-column text-small form-field'>
