--- a/index.html
+++ b/index.html
@@ -15,6 +15,19 @@
 </head>
 
 <body id="#top">
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-866X2669MK"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+
+    gtag('config', 'G-866X2669MK');
+  </script>
+
   <nav class="flex flex-between">
     <a href="#top" class="initials">A.S.</a>
     <ul class="flex flex-center flex-between">
