--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           <a href='https://www.linkedin.com/in/anthony-siletti/' target="_blank">
             LinkedIn
           </a>
-          <a href="/anthony_siletti_resume.pdf" target="_blank">Resume</a>
+          <a href="https://raw.githubusercontent.com/kowabunga/resume/main/Anthony%20Siletti%20Resume.pdf" target="_blank">Resume</a>
         </div>
       </div>
     </div>
