--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
               Task Terminator is task management application used to manage all of your day-to-day tasks to aide in overall organization. Users will be able to create, edit and terminate all tasks once completed. Built with Django.
             </p>
             <div>
-              <a href="https://github.com/kowabunga/task_terminator" target="_blank">Github</a>
+              <a href="https://github.com/kowabunga/task_terminator" target="_blank">GitHub</a>
               <a href="https://cold-firefly-9232.fly.dev/" target="_blank">Live</a>
             </div>
           </div>
@@ -156,7 +156,7 @@
               Master Cook is a recipe and blog sharing website. You'll find yourself able to share your favorite recipes conveniently and post great tips and tricks for the kitchen and beyond!
             </p>
             <div>
-              <a href="https://github.com/kowabunga/ga-project-4" target="_blank">Github</a>
+              <a href="https://github.com/kowabunga/ga-project-4" target="_blank">GitHub</a>
               <a href="https://mastercook.cyclic.app/" target="_blank">Live</a>
             </div>
           </div>
